--- a/app/assets/style/layout/index.scss
+++ b/app/assets/style/layout/index.scss
@@ -11,3 +11,36 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+// .card {
+//   height: 350px;
+// }
+
+.main-card {
+  height: 350px;
+}
+
+.review {
+  background-image: url(../images/people2.png);
+}
+
+.box {
+  opacity: 0.75;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
